@@ -5,6 +5,6 @@ import ru.rosatom.documentflow.models.DocProcessStatus;
 
 public class IllegalProcessStatusException extends BadRequestException {
     public IllegalProcessStatusException(DocProcess docProcess, DocProcessStatus attemptStatus) {
-        super("Нельзя перевести процесс со статусом %s в статус %s".formatted(docProcess.getStatus(), attemptStatus));
+        super(String.format("Нельзя перевести процесс со статусом %s в статус %s", docProcess.getStatus(), attemptStatus));
     }
 }
